Ticket Number: 2330 Debit Note > Apply To Invoice > Enhancement For Save Button

--- a/src/screens/debitNotes/screens/applyToInvoice/style.scss
+++ b/src/screens/debitNotes/screens/applyToInvoice/style.scss
@@ -14,4 +14,9 @@
   .disabled-cursor {
     cursor: not-allowed;
   }
+  button[disabled] {
+    background-color: #C8CED3 !important; 
+    border-color: #C8CED3 !important; 
+    color: #000 !important;
+   }
 }
